--- a/15ejs/views/index.ejs
+++ b/15ejs/views/index.ejs
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hey! It is a <%= day %>, It's time to <%= message %> </h1>
 </body>
 </html>
