--- a/19 EJS passing data/views/index.ejs
+++ b/19 EJS passing data/views/index.ejs
@@ -9,6 +9,11 @@
 
 <body>
   <!-- Write your code here -->
+  <% if(locals.nameLetter){%>
+    <h1>There are <%= nameLetter %> letter in your name</h1>
+  <% } else { %>
+    <h1>Enter your name below!</h1>
+  <% }%>
   <form action="/submit" method="POST">
     <input type="text" name="fName" placeholder="First name">
     <input type="text" name="lName" placeholder="Last name">
